--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,8 @@
 compile.on.save=false
 do.depend=false
 do.jar=true
+do.jlink=false
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/home/deric/.netbeans/7.3beta2/build.properties
+jlink.strip=false
+user.properties.file=/home/askar/snap/netbeans/common/data/11.3/build.properties
